--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,14 +1,36 @@
+/* fonts */
 *{
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    -webkit-font-smoothing: antialiased;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        -webkit-font-smoothing: antialiased;
 }
-img[src*="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] {
-	display: none!important;}
-body{
-    background-color: #dbecfd;
-    background-image: url('/bg-blue-light.png');
-    background-size: cover;
+
+/* clear the body margin */
+body {
+  margin: 0;
+  min-height:100vh;
 }
+
+.banner {
+  position: relative;
+  overflow: hidden;
+  /* stuff */
+  background: rgba(255, 255, 255, .85);
+  min-height:100vh;
+  
+}
+.banner__video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: auto;
+  min-width: 100%;
+  height: auto;
+  min-height: 100%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: -1;
+}
+
+/** -- GLOBAL.CSS **/
 hr {
     margin-top: 20px;
     margin-bottom: 20px;
